mdmCeneveo/src/objects/Related_ERP__c.object
<CustomObject>
    <fields>
        <fullName>CVOLocation_ID__c</fullName>
        <label>CVOLocation_ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cenveo_JDE_Location_Numer__c</fullName>
        <label>Cenveo JDE Location Numer</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cenveo_Source_System_Location_Number__c</fullName>
        <label>Cenveo Source System Location Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Of_Business__c</fullName>
        <label>Line Of Business</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party Relationship</label>
        <referenceTo>Party__c</referenceTo>
        <relationshipLabel>Related ERPs</relationshipLabel>
        <relationshipName>Related_ERPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Corporate_JDE_Idenftifier_Value__c</fullName>
        <label>Related Corporate JDE Idenftifier Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Corporate_JDE__c</fullName>
        <label>Related Corporate JDE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Parent_JDE_Identifier_Value__c</fullName>
        <label>Related Parent JDE Identifier Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Related ERPs</relationshipLabel>
        <relationshipName>Related_ERPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_system_party_identifier_value__c</fullName>
        <label>Source system party identifier value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Related ERP</label>
    <nameField>
        <displayFormat>ERP-{0000}</displayFormat>
        <label>Related ERP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related ERPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>